--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,25 +1,22 @@
 name: bdlogging
-description: A new Flutter package project.
+description: A Flutter package that provide logging capability for flutter apps.
 version: 0.0.1
 homepage: https://github.com/bitsydarel/bdlogging
 
 environment:
   sdk: '>=2.14.0 <3.0.0'
-  flutter: ">=1.17.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
   http: '>=0.13.0 <1.0.0'
   intl: '>=0.17.0 <1.0.0'
   io: '>=1.0.0 <1.1.0'
+  meta: '>=1.3.0 <2.0.0'
   path: '>=1.8.0 <2.0.0'
 
 dev_dependencies:
   flutter_code_style: ^2.1.1
-  flutter_test:
-    sdk: flutter
   mocktail: '>=0.1.4 <1.0.0'
+  test: '>=1.16.6 <2.0.0'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
