--- a/bdlogging_firebase/pubspec.yaml
+++ b/bdlogging_firebase/pubspec.yaml
@@ -1,6 +1,6 @@
 name: bdlogging_firebase
 description: A Flutter package that provide BDLogHandler for firebase services.
-version: 0.1.1
+version: 0.1.2+2
 homepage: https://github.com/bitsydarel/bdlogging
 
 environment:
@@ -8,7 +8,7 @@ environment:
   flutter: '>=3.3.0'
 
 dependencies:
-  bdlogging: ^0.1.1
+  bdlogging: ^0.1.2
   firebase_crashlytics: '>=3.3.0 <4.0.0'
   flutter:
     sdk: flutter
