--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   async: '>=2.13.0 <3.0.0'
   collection: '>=1.19.1 <2.0.0'
+  cryptography: '>=2.7.0 <3.0.0'
   http: '>=1.2.1 <2.0.0'
   intl: '>=0.20.0 <1.0.0'
   io: '>=1.0.5 <2.0.0'
